# tangara-pipeline

./: .coveragerc  .gitignore  README.md  backup.sh  install-poetry.sh  last_24h.sh  last_30min.sh  last_5min.sh  last_hour.sh  pyproject.toml  requirements.txt  run.sh  start-containers.sh
.devcontainer/: devcontainer.json
.github/workflows/: kedro-test-app.yml  pm25-nowcast-aqi.yml  tangara-pipeline.yml  tangara-test-pipeline.yml
conf/base/: catalog.yml
data/01_raw/: pm25_raw.csv  spreadsheets.csv  tangaras.csv
data/02_intermediate/: pm25_clean.csv
data/03_primary/: pm25_last_12h.csv  pm25_last_24h.csv  pm25_last_8h.csv  pm25_last_hour.csv
data/04_feature/: aqi_instant.csv  aqi_last_12h.csv  aqi_last_24h.csv  aqi_last_8h.csv  aqi_last_hour.csv
deprecated/: KEDRO.md  backup.sh  last_24h.sh  pyproject.toml
deprecated/conf/: README.md
deprecated/notebooks/: aqi_instant.ipynb  aqi_last_24h.ipynb  aqi_last_8h.ipynb  pm25_movil_24h.ipynb  pm25_nowcast_aqi.ipynb  spreadsheets.ipynb  tangara_stations.ipynb
docs/source/: index.rst
notebooks/: aqi_instant.ipynb  aqi_last_12h.ipynb  aqi_last_hour.ipynb  influxdb_tangara_stations.ipynb  influxdbapi.ipynb  pm25.ipynb  pm25_by_hour.ipynb  pm25_clean.ipynb  pm25_influxdb_aqi.ipynb  pm25_last_12h.ipynb  pm25_last_24h.ipynb  pm25_last_8h.ipynb  pm25_last_hour.ipynb  pm25_movil_24h.ipynb  pm25_nowcast_aqi.ipynb  pm25_raw.ipynb  spreadsheets.ipynb  tangara_stations.ipynb
src/: requirements.txt  setup.py
src/tangara_pipeline/: __init__.py  pipeline_registry.py  settings.py
standalone/: README.md  example.env
(+657 files in other folders)
